# monsoon-onset

./: .dockerignore  .gitignore  .gitmodules  .image-deps.yaml  CLOUD_ARCHITECTURE.md  MULTI_REGION_REFACTOR_PLAN.md  OPERATIONS_MANUAL_CLOUD.md  OPERATIONS_MANUAL_DSI.md  README.md  README_CLOUD.md  SETUP_CLOUD_LOCAL.md  cloudbuild.yaml  cron.txt  environment.yml  grid_2x2_dissem.csv  imerg_all.sh  imerg_daily.sh  indian_monsoon_script.py
.ipynb_checkpoints/: README-checkpoint.md
AIFS/: chron_job.sh
AIFS/grids/: grid_2p0.txt
AIFS/utils/: chron_job_derecho.sh  cron_job_dsi.sh  cron_job_midway.sh  download_ic.py  download_ic_dep.py  pipeline.py  pipeline_hind.py  post_process.py  preprocess_ic.py  run_model.py  run_model.sh  run_model_ENS.py  run_model_derecho.sh  verify_completion.py
HPC/derecho/: process_IMERG.sh  run_AIFS.sh  run_NGCM.sh
HPC/dsi/: process_IMERG.sh  process_S2S.sh  run_AIFS.sh  run_AIFS_ENS.sh  run_NGCM.sh  run_gencast.sh
NeuralGCM/: chron_job.sh
additional_information/: coding_standards.md
config/: models.json
cron/: cron_dsi.txt  cron_midway.txt
docker/gencast/: Dockerfile  README.md  pyproject.toml  requirements.txt
docker/gencast/src/: main.py
rescue/: run_pipeline.py
scripts/: check_pipeline.py  clean_pycache.py  cloudbuild_detect_targets.py
terraform/: README.md  cloudbuild.apply.yaml  cloudbuild.plan.yaml  variables.tf
tests/: test_blend_wrapper.py  test_check_pipeline.py  test_drive_client.py  test_pipeline_state_actions.py  test_sync_wrapper.py  test_tpu_dispatch.py  test_workflow_template_contract.py
(+242 files in other folders)
