[project]
name = "gencast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.0",
    "dask>=2026.3.0",
    "earthkit-data>=0.20.0",
    "gcsfs>=2026.5.0",
    "google-cloud-storage>=3.10.1",
    "graphcast",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "jax[tpu]>=0.6.2",
    "netcdf4>=1.7.3",
    "xarray==2024.11.0",
    "zarr>=2.18.3",
]

[tool.uv.sources]
graphcast = { url = "https://github.com/google-deepmind/graphcast/archive/refs/tags/v0.2.zip" }
